flapivor/tests/m3/hopix/typechecker/good/12-rec-function-definition.hopix
def id : Int -> Int (x) = id (x)

val main : Int =
    id (42)