flapivor/tests/m3/hopix/typechecker/bad/16-invalid-function-call-02.hopix
def f : Int * Int -> Int (x) = x

val main : Int = f (0)